aligned fixed nav layout on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,7 @@ footer {
 @media (max-width: 500px) {
   .home {
     overflow: hidden;
+    padding-top: 95px;
   }
 }
 .home .intro img {
