--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,7 @@
 
   @media @phone {
     overflow: hidden;
+    padding-top: 95px;
   }
 
   .intro {
